# uptions

./: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  lefthook.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20260526_000001_create_waitlist.rs  m20260527_131801_create_waitlist.rs  m20260601_000001_identity_and_venue_connections.rs  m20260610_000001_email_verification_and_password_reset.rs  main.rs
src/: main.rs  response.rs
src/app/: docs.rs  mod.rs  state.rs
src/auth/: dto.rs  handlers.rs  mod.rs  service.rs
src/config/: mod.rs
src/db/: mod.rs  pool.rs
src/dtos/: mod.rs
src/entities/: auth_method.rs  mod.rs  user.rs  venue_connection.rs  waitlist.rs
src/error/: mod.rs
src/integrations/: mod.rs  polymarket.rs
src/libs/: resend_client.rs
src/polymarket/: client.rs  dto.rs  handlers.rs  mod.rs
src/users/: handler.rs  service.rs
