[package]
name = "uptions-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.44"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
polymarket_client_sdk_v2 = { version = "0.5.1", features = ["gamma", "clob"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = "1.23.1"
