[package]
name = "uptions-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
axum = {  version = "0.8.9", features = [ "macros" , "json" , "query"]}
dotenvy = "0.15.7"
k256 = "0.13.4"
migration = { path = "migration" }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha3 = "0.10.9"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
